<resources>
    <string name="app_name">Guardasaude</string>
    <string name="app_name_login">guarda saúde</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Authenticating">Authenticating...</string>
    <string name="Exams">Exams</string>
    <string name="Filter">Filter</string>
    <string name="Notifications">Notifications</string>
    <string name="Messages">Messages</string>
    <string name="login_succes">Succes</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_manager">Manager Identified!</string>
    <string name="choose_domain">Choose domain</string>
    <string name="find">Find</string>
    <string name="cancel">Cancel</string>
    <string name="findnew">Find new exam</string>
    <string name="Protocol">Protocol</string>
    <string name="Information">Information</string>
    <string name="Report">Report</string>
    <string name="Images">Images</string>
    <string name="Close">Close</string>

    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
    </string-array>
    <string name="search">Search</string>
    <string name="menu_search">Search menu</string>
    <string name="search_hint">search hint</string>
    <string name="exam_literal">EXAM</string>
    <string name="comments">Comments</string>
    <string name="Image_Overview">IMAGE OVERVIEW</string>
    <string name="show_comments">SHOW COMMENTS</string>
    <string name="server_error">Error: Server not responding</string>
    <string name="choose_role">Choose Role</string>
    <string name="empty_creds">Field(s) cannot be empty!</string>
    <string name="ExamStatus">Exam Status</string>
    <string name="SortBy">Sort By</string>
    <string name="sort">Sort</string>
    <string name="sortexams">Sort Exams</string>
    <string name="exam_type">Exam Type</string>
    <string name="exam_id">Exam Id</string>
    <string name="exam_clinic">Exam Clinic</string>
    <string name="exam_patient">Exam Patient</string>
    <string name="date_literal">23/04/2016 12:10</string>
    <string name="exam_reporting_phys">Reporting Physician</string>
    <string name="information">Information</string>
    <string name="comment_example">Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken.</string>
    <string name="information_error">NOT FOUND</string>
    <string name="information_error_response">Try again or contact an administrator</string>
    <string name="username">Username</string>
    <string name="patient">Patient</string>
    <string name="report">Report</string>
    <string name="reporting">Reporting Physician</string>
    <string name="referring">Referring Physician</string>
    <string name="executionDate">Execution Date</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="identification">Identification</string>
    <string name="clinicname">Clinic Name</string>
</resources>