<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:id="@+id/sortAsc">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_less_24dp"
            android:id="@+id/ascImg"
            android:tint="@color/colorTextColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asc"
            android:id="@+id/asc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sortDesc">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_more_24dp"
            android:id="@+id/descImg"
            android:tint="@color/colorTextColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:id="@+id/desc"/>
            </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/radio_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient" />

        <RadioButton
            android:id="@+id/radio_identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identification" />

        <RadioButton
            android:id="@+id/radio_executionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/executionDate"
            android:checked="false" />

        <!-- TODO ADD CLINIC -->

    </RadioGroup>

</LinearLayout>