<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp">

    <TextView
        android:id="@+id/gs_exam_comment_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="@android:style/TextAppearance.Material.Notification.Title" />

    <TextView
        android:id="@+id/gs_exam_comment_time_posted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_literal"
        android:layout_below="@+id/gs_exam_comment_username"
        android:layout_alignParentStart="true"
        android:textAppearance="@android:style/TextAppearance.Material.Notification.Time" />

    <TextView
        android:id="@+id/gs_exam_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_example"
        android:layout_below="@+id/gs_exam_comment_time_posted"
        android:layout_alignParentStart="true"
        android:paddingTop="6dp"
        android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2" />

</RelativeLayout>