<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.managersystems.guardasaude.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name_login"
            android:textSize="35sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/gs_usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginInput"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/gs_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Username"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryLight" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/gs_passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginInput"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/gs_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryLight" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/gs_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/Login"
            android:theme="@style/LoginButton" />

        <ProgressBar
            android:id="@+id/gs_login_progressbar"
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16sp" />

        <TextView
            android:id="@+id/gs_login_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Authenticating"
            android:textAppearance="@style/TextAppearance.App.Authentication.Progress" />

    </LinearLayout>


</LinearLayout>
